# data-collector

./: pyproject.toml  pytrends_api.ipynb
api/: naver_api.py  public_data_api.py  pytrends_api.ipynb  seoul_open_api.py  solar_api.py  youtube_api.py  youtube_list_api.py  youtube_reply_api.py
data/: dgy_sel.csv  public_traffic.csv  seoul_cycle.csv
tool/: beautiful_soup.ipynb  selenium.ipynb
