[project]
name = "data-collector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "google-api-python-client>=2.176.0",
    "google-play-scraper>=1.2.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "openai>=1.97.1",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "pytrends>=4.9.2",
    "requests>=2.32.4",
    "selenium>=4.34.2",
]
